force-app/main/default/objects/BasiqEntityBigAffordability__b/BasiqEntityBigAffordability__b.object-meta.xml
<CustomObject>
    <label>Basiq Entity Big Affordability</label>
    <pluralLabel>Basiq Entity Big Affordabilities</pluralLabel>
</CustomObject>