force-app/main/default/objects/BasiqEntityBigAffordability__b/fields/Assests__c.field-meta.xml
<CustomField>
    <fullName>Assests__c</fullName>
    <label>Assests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>