force-app/main/default/objects/BasiqEntityBigAffordability__b/fields/BasiqAffordabilityId__c.field-meta.xml
<CustomField>
    <fullName>BasiqAffordabilityId__c</fullName>
    <label>Basiq Affordability Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>