force-app/main/default/objects/BasiqEntityBigAffordability__b/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <label>Credit Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>