force-app/main/default/objects/BasiqEntityBigAffordability__b/fields/GeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>GeneratedDate__c</fullName>
    <label>Generated Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>