force-app/main/default/objects/BasiqEntityBigAffordability__b/fields/Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Liabilities__c</fullName>
    <label>Liabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>