force-app/main/default/objects/BasiqEntityBigAffordability__b/fields/NetPosition__c.field-meta.xml
<CustomField>
    <fullName>NetPosition__c</fullName>
    <label>Net Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>